<resources>
    <string name="app_name">Home4U</string>

    <string name="levels_access">Уровни доступа</string>
    <string name="types_devices">Типы устройств</string>
    <string name="types_events">Типы событий</string>
    <string name="types_data">Типы данных</string>
    <string name="types_commands">Типы команд</string>
    <string name="add_data">Добавить данные</string>
    <string name="websocket">Websocket</string>
    <string name="title_activity_login">Авторизация</string>


    <string name="auth.email">Е-mail</string>
    <string name="auth.password">Password</string>
    <string name="auth.confirm_password">Confirm password</string>
    <string name="auth.login">Login</string>
    <string name="auth.name">Name</string>
    <string name="auth.surname">Surname</string>
    <string name="auth.phone">Phone</string>
    <string name="auth.no_account">Don\'t have an account? </string>
    <string name="auth.yes_account">Alredy have an account? </string>
    <string name="auth.sign_continue">Sign in to continue</string>
    <string name="auth.must_complete">You must complete this field</string>

    <string name="main.devices">Devices</string>
    <string name="main.rooms">Rooms</string>

    <string name="add.device">Device</string>
    <string name="add.date">Date</string>
    <string name="add.time">Time</string>
    <string name="add.add_event">Add event for device</string>
    <string name="add.add_data">Add data for device</string>

    <string name="settings.day">Day</string>
    <string name="settings.night">Night</string>

    <string name="dialog.wait">Wait ...</string>
    <string name="dialog.event">Events</string>
    <string name="dialog.data">Data</string>
    <string name="dialog.ok">Ok</string>
    <string name="dialog.Cancel">Cancel</string>

    <!-- Buttons -->
    <string name="button.login">Login</string>
    <string name="button.sign_up">Sign Up</string>
    <string name="button.sign_in">Sign In</string>

    <!-- Errors -->
    <string name="error.invalid_sign">Invalid login or password</string>
    <string name="error.invalid_email">Invalid e-mail</string>
    <string name="error.invalid_login">Invalid login</string>
    <string name="error.invalid_password">Min password length must be 6 characters</string>
    <string name="error.no_match_passwords">Passwords do not match</string>
    <string name="no_internet_connection">No internet connection</string>

</resources>
