<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/account"
        android:title=""
        android:icon="@drawable/ic_account"
        app:showAsAction="always"/>
    <item
        android:id="@+id/levels_access"
        android:title="@string/levels_access"
        app:showAsAction="never"/>

    <item
        android:id="@+id/types_devices"
        android:title="@string/types_devices"
        app:showAsAction="never"/>

    <item
        android:id="@+id/types_events"
        android:title="@string/types_events"
        app:showAsAction="never"/>

    <item
        android:id="@+id/types_data"
        android:title="@string/types_data"
        app:showAsAction="never"/>

    <item
        android:id="@+id/types_commands"
        android:title="@string/types_commands"
        app:showAsAction="never"/>

    <item
        android:id="@+id/add_data"
        android:title="@string/add_data"
        app:showAsAction="never"/>

    <item
        android:id="@+id/websocket"
        android:title="@string/websocket"
        app:showAsAction="never"/>

</menu>